--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,5 +24,5 @@ sphinx:
 
 python:
   install:
-    - requirements: docs/requirements-dev.txt
+    - requirements: docs/requirements-doc.txt
   system_packages: true  
