--- a/INSAR4SM_env.yml
+++ b/INSAR4SM_env.yml
@@ -3,24 +3,391 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python==3.9.12
-  - cdsapi==0.6.1
-  - xarray==0.21.1
-  - pandas==1.4.2
-  - geopandas==0.10.2
-  - numpy==1.22.3
-  - netCDF4==1.5.8
-  - tqdm==4.64.0
-  - requests==2.27.1
-  - shapely==1.8.2
-  - joblib==1.1.0
-  - libopenblas==0.3.21
-  - matplotlib==3.5.2
-  - pyproj==3.3.1
-  - rasterio==1.2.10
-  - scikit-learn = 1.0.2
-  - gdal==3.4.2
-  - glib==2.72.1
-  - scipy==1.8.0
-  - dask==2022.2.1
-  - pytest==7.1.3
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - affine=2.4.0
+  - alsa-lib=1.2.14
+  - anyio=4.9.0
+  - argon2-cffi=23.1.0
+  - argon2-cffi-bindings=21.2.0
+  - arrow=1.3.0
+  - asttokens=3.0.0
+  - async-lru=2.0.5
+  - attrs=25.3.0
+  - aws-c-auth=0.9.0
+  - aws-c-cal=0.9.0
+  - aws-c-common=0.12.2
+  - aws-c-compression=0.3.1
+  - aws-c-event-stream=0.5.4
+  - aws-c-http=0.9.7
+  - aws-c-io=0.18.1
+  - aws-c-mqtt=0.12.3
+  - aws-c-s3=0.7.15
+  - aws-c-sdkutils=0.2.3
+  - aws-checksums=0.2.7
+  - aws-crt-cpp=0.32.4
+  - aws-sdk-cpp=1.11.510
+  - azure-core-cpp=1.14.0
+  - azure-identity-cpp=1.10.0
+  - azure-storage-blobs-cpp=12.13.0
+  - azure-storage-common-cpp=12.8.0
+  - azure-storage-files-datalake-cpp=12.12.0
+  - babel=2.17.0
+  - beautifulsoup4=4.13.4
+  - bleach=6.2.0
+  - bleach-with-css=6.2.0
+  - blosc=1.21.6
+  - bokeh=3.7.2
+  - branca=0.8.1
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - brotli-python=1.1.0
+  - bzip2=1.0.8
+  - c-ares=1.34.5
+  - ca-certificates=2025.4.26
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cairo=1.18.4
+  - cdsapi=0.7.5
+  - certifi=2025.1.31
+  - cffi=1.17.1
+  - cfgrib=0.9.15.0
+  - cftime=1.6.4
+  - charset-normalizer=3.4.1
+  - click=8.1.8
+  - click-plugins=1.1.1
+  - cligj=0.7.2
+  - cloudpickle=3.1.1
+  - colorama=0.4.6
+  - comm=0.2.2
+  - contourpy=1.3.2
+  - cycler=0.12.1
+  - cyrus-sasl=2.1.27
+  - cytoolz=1.0.1
+  - dask=2025.4.1
+  - dask-core=2025.4.1
+  - datapi=0.4.0
+  - dbus=1.13.6
+  - debugpy=1.8.14
+  - decorator=5.2.1
+  - defusedxml=0.7.1
+  - distributed=2025.4.1
+  - double-conversion=3.3.1
+  - eccodes=2.41.0
+  - exceptiongroup=1.2.2
+  - executing=2.2.0
+  - expat=2.7.0
+  - findlibs=0.0.5
+  - folium=0.19.5
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.15.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.57.0
+  - fqdn=1.5.1
+  - freeglut=3.2.2
+  - freetype=2.13.3
+  - freexl=2.0.0
+  - fsspec=2025.3.2
+  - gdal=3.10.3
+  - geopandas=1.0.1
+  - geopandas-base=1.0.1
+  - geos=3.13.1
+  - geotiff=1.7.4
+  - gflags=2.2.2
+  - giflib=5.2.2
+  - glib=2.84.1
+  - glib-tools=2.84.1
+  - glog=0.7.1
+  - graphite2=1.3.13
+  - h11=0.16.0
+  - h2=4.2.0
+  - harfbuzz=11.1.0
+  - hdf4=4.2.15
+  - hdf5=1.14.6
+  - hpack=4.1.0
+  - httpcore=1.0.9
+  - httpx=0.28.1
+  - hyperframe=6.1.0
+  - icu=75.1
+  - idna=3.10
+  - importlib-metadata=8.6.1
+  - importlib_resources=6.5.2
+  - iniconfig=2.0.0
+  - ipykernel=6.29.5
+  - ipython=9.2.0
+  - ipython_pygments_lexers=1.1.1
+  - ipywidgets=8.1.6
+  - isoduration=20.11.0
+  - jasper=4.2.5
+  - jedi=0.19.2
+  - jinja2=3.1.6
+  - joblib=1.4.2
+  - json-c=0.18
+  - json5=0.12.0
+  - jsonpointer=3.0.0
+  - jsonschema=4.23.0
+  - jsonschema-specifications=2025.4.1
+  - jsonschema-with-format-nongpl=4.23.0
+  - jupyter=1.1.1
+  - jupyter-lsp=2.2.5
+  - jupyter_client=8.6.3
+  - jupyter_console=6.6.3
+  - jupyter_core=5.7.2
+  - jupyter_events=0.12.0
+  - jupyter_server=2.15.0
+  - jupyter_server_terminals=0.5.3
+  - jupyterlab=4.4.1
+  - jupyterlab_pygments=0.3.0
+  - jupyterlab_server=2.27.3
+  - jupyterlab_widgets=3.0.14
+  - keyutils=1.6.1
+  - kiwisolver=1.4.7
+  - krb5=1.21.3
+  - lcms2=2.17
+  - ld_impl_linux-64=2.43
+  - lerc=4.0.0
+  - libabseil=20250127.1
+  - libaec=1.1.3
+  - libarchive=3.7.7
+  - libarrow=19.0.1
+  - libarrow-acero=19.0.1
+  - libarrow-dataset=19.0.1
+  - libarrow-substrait=19.0.1
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcblas=3.9.0
+  - libclang-cpp20.1=20.1.3
+  - libclang13=20.1.3
+  - libcrc32c=1.1.2
+  - libcups=2.3.3
+  - libcurl=8.13.0
+  - libdeflate=1.23
+  - libdrm=2.4.124
+  - libedit=3.1.20250104
+  - libegl=1.7.0
+  - libev=4.33
+  - libevent=2.1.12
+  - libexpat=2.7.0
+  - libffi=3.4.6
+  - libfreetype=2.13.3
+  - libfreetype6=2.13.3
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgdal-core=3.10.3
+  - libgfortran=14.2.0
+  - libgfortran5=14.2.0
+  - libgl=1.7.0
+  - libglib=2.84.1
+  - libglu=9.0.3
+  - libglvnd=1.7.0
+  - libglx=1.7.0
+  - libgomp=14.2.0
+  - libgoogle-cloud=2.36.0
+  - libgoogle-cloud-storage=2.36.0
+  - libgrpc=1.71.0
+  - libiconv=1.18
+  - libjpeg-turbo=3.1.0
+  - libkml=1.3.0
+  - liblapack=3.9.0
+  - libllvm20=20.1.3
+  - liblzma=5.8.1
+  - libnetcdf=4.9.2
+  - libnghttp2=1.64.0
+  - libnsl=2.0.1
+  - libntlm=1.8
+  - libopenblas=0.3.29
+  - libopengl=1.7.0
+  - libopentelemetry-cpp=1.20.0
+  - libopentelemetry-cpp-headers=1.20.0
+  - libparquet=19.0.1
+  - libpciaccess=0.18
+  - libpng=1.6.47
+  - libpq=17.4
+  - libprotobuf=5.29.3
+  - libre2-11=2024.07.02
+  - librttopo=1.1.0
+  - libsodium=1.0.20
+  - libspatialite=5.1.0
+  - libsqlite=3.49.1
+  - libssh2=1.11.1
+  - libstdcxx=14.2.0
+  - libstdcxx-ng=14.2.0
+  - libthrift=0.21.0
+  - libtiff=4.7.0
+  - libutf8proc=2.10.0
+  - libuuid=2.38.1
+  - libwebp-base=1.5.0
+  - libxcb=1.17.0
+  - libxcrypt=4.4.36
+  - libxkbcommon=1.9.0
+  - libxml2=2.13.7
+  - libxslt=1.1.39
+  - libzip=1.11.2
+  - libzlib=1.3.1
+  - locket=1.0.0
+  - lz4=4.3.3
+  - lz4-c=1.10.0
+  - lzo=2.10
+  - mapclassify=2.8.1
+  - markupsafe=3.0.2
+  - matplotlib=3.10.1
+  - matplotlib-base=3.10.1
+  - matplotlib-inline=0.1.7
+  - minizip=4.0.9
+  - mistune=3.1.3
+  - msgpack-python=1.1.0
+  - multiurl=0.3.5
+  - munkres=1.1.4
+  - mysql-common=9.2.0
+  - mysql-libs=9.2.0
+  - narwhals=1.36.0
+  - nb_conda_kernels=2.5.1
+  - nbclient=0.10.2
+  - nbconvert-core=7.16.6
+  - nbformat=5.10.4
+  - ncurses=6.5
+  - nest-asyncio=1.6.0
+  - netcdf4=1.7.2
+  - networkx=3.4.2
+  - nlohmann_json=3.12.0
+  - notebook=7.4.1
+  - notebook-shim=0.2.4
+  - numpy=2.2.5
+  - openjpeg=2.5.3
+  - openldap=2.6.9
+  - openssl=3.5.0
+  - orc=2.1.1
+  - overrides=7.7.0
+  - packaging=25.0
+  - pandas=2.2.3
+  - pandocfilters=1.5.0
+  - parso=0.8.4
+  - partd=1.4.2
+  - pcre2=10.44
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pillow=11.1.0
+  - pip=25.1
+  - pixman=0.44.2
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=4.3.7
+  - pluggy=1.5.0
+  - proj=9.6.0
+  - prometheus-cpp=1.3.0
+  - prometheus_client=0.21.1
+  - prompt-toolkit=3.0.51
+  - prompt_toolkit=3.0.51
+  - psutil=7.0.0
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pyarrow=19.0.1
+  - pyarrow-core=19.0.1
+  - pycparser=2.22
+  - pygments=2.19.1
+  - pyogrio=0.10.0
+  - pyparsing=3.2.3
+  - pyproj=3.7.1
+  - pyside6=6.9.0
+  - pysocks=1.7.1
+  - pytest=8.3.5
+  - python=3.11.12
+  - python-dateutil=2.9.0.post0
+  - python-eccodes=2.37.0
+  - python-fastjsonschema=2.21.1
+  - python-json-logger=2.0.7
+  - python-tzdata=2025.2
+  - python_abi=3.11
+  - pytz=2025.2
+  - pyyaml=6.0.2
+  - pyzmq=26.4.0
+  - qhull=2020.2
+  - qt6-main=6.9.0
+  - rasterio=1.4.3
+  - re2=2024.07.02
+  - readline=8.2
+  - referencing=0.36.2
+  - requests=2.32.3
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rioxarray=0.19.0
+  - rpds-py=0.24.0
+  - s2n=1.5.17
+  - scikit-learn=1.6.1
+  - scipy=1.15.2
+  - send2trash=1.8.3
+  - setuptools=79.0.1
+  - shapely=2.1.0
+  - six=1.17.0
+  - snappy=1.2.1
+  - sniffio=1.3.1
+  - snuggs=1.4.7
+  - sortedcontainers=2.4.0
+  - soupsieve=2.5
+  - sqlite=3.49.1
+  - stack_data=0.6.3
+  - tblib=3.1.0
+  - terminado=0.18.1
+  - threadpoolctl=3.6.0
+  - tinycss2=1.4.0
+  - tk=8.6.13
+  - tomli=2.2.1
+  - toolz=1.0.0
+  - tornado=6.4.2
+  - tqdm=4.67.1
+  - traitlets=5.14.3
+  - types-python-dateutil=2.9.0.20241206
+  - typing-extensions=4.13.2
+  - typing_extensions=4.13.2
+  - typing_utils=0.1.0
+  - tzdata=2025b
+  - unicodedata2=16.0.0
+  - uri-template=1.3.0
+  - uriparser=0.9.8
+  - urllib3=2.4.0
+  - wayland=1.23.1
+  - wcwidth=0.2.13
+  - webcolors=24.11.1
+  - webencodings=0.5.1
+  - websocket-client=1.8.0
+  - wheel=0.45.1
+  - widgetsnbextension=4.0.14
+  - xarray=2025.3.1
+  - xcb-util=0.4.1
+  - xcb-util-cursor=0.1.5
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.1
+  - xcb-util-renderutil=0.3.10
+  - xcb-util-wm=0.4.2
+  - xerces-c=3.2.5
+  - xkeyboard-config=2.43
+  - xorg-libice=1.1.2
+  - xorg-libsm=1.2.6
+  - xorg-libx11=1.8.12
+  - xorg-libxau=1.0.12
+  - xorg-libxcomposite=0.4.6
+  - xorg-libxcursor=1.2.3
+  - xorg-libxdamage=1.1.6
+  - xorg-libxdmcp=1.1.5
+  - xorg-libxext=1.3.6
+  - xorg-libxfixes=6.0.1
+  - xorg-libxi=1.8.2
+  - xorg-libxrandr=1.5.4
+  - xorg-libxrender=0.9.12
+  - xorg-libxtst=1.2.5
+  - xorg-libxxf86vm=1.1.6
+  - xyzservices=2025.4.0
+  - yaml=0.2.5
+  - zeromq=4.3.5
+  - zict=3.0.0
+  - zipp=3.21.0
+  - zlib=1.3.1
+  - zstandard=0.23.0
+  - zstd=1.5.7
+prefix: /home/kleanthis/miniconda3/envs/insar4sm
